# stecs

./: .justfile  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: lint.yml  test.yml
benches/: pos_vel.rs  simple.rs
ecs-derive/: Cargo.toml
ecs-derive/src/: components.rs  get.rs  lib.rs  optic.rs  query.rs  split.rs  struct_of.rs  zip.rs
ecs-derive/src/get/: derive.rs  mod.rs  parse.rs  types.rs
examples/: blogpost.rs  example.rs  full.rs  generics.rs  mutations.rs
src/: archetype.rs  arena.rs  hashstorage.rs  lib.rs  query.rs
src/archetype/: iter.rs  mod.rs
src/query/: iter.rs  macros.rs  mod.rs
src/storage/: arena.rs  hashstorage.rs  index.rs  mod.rs  vec.rs
stecs-derive/: Cargo.toml
stecs-derive/src/: split.rs
stecs-derive/src/get/: parse.rs
