[package]
name = "stecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["arena", "query_mut"]
query_mut = ["stecs-derive/query_mut"]
hashstorage = []
arena = ["dep:slotmap"]

[workspace]
members = ["stecs-derive"]

[dependencies]
stecs-derive = { path = "stecs-derive" }
slotmap = { version = "1.0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "pos_vel"
harness = false
