[package]
name = "stecs"
version = "0.1.0"
edition = "2021"

[features]
default = ["arena", "query_mut"]
query_mut = ["stecs-derive/query_mut"]
hashstorage = []
arena = ["dep:slotmap"]

[workspace]
members = ["stecs-derive"]

[dependencies]
stecs-derive = { path = "stecs-derive", version = "0.1.0" }
slotmap = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pos_vel"
harness = false
