[package]
name = "ecs-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
query_mut = []

[dependencies]
darling = "0.14.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
thiserror = "1.0.40"
