[package]
name = "stecs-derive"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Nertsal <nestralnertsal@gmail.com>"]
description = "Proc macros for stecs"
documentation = "https://docs.rs/stecs-derive"
readme = "../README.md"
homepage = "https://github.com/Nertsal/stecs"
repository = "https://github.com/Nertsal/stecs"

[lib]
proc-macro = true

[features]
default = []
query_mut = []

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "1.0"
